# maestro-ai-harness

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  audit.rs  context_window.rs  mod.rs
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: Plan.agent.md  ask.agent.md
.github/instructions/: github-delivery-gates.instructions.md  kv-cache.instructions.md  rag-gate.instructions.md  rust-companion.instructions.md  spec-driven.instructions.md
.github/workflows/: ai-governance-gate.yml  release.yml
docs/: README.md
docs/Maestro_Execution_Plans/: DOCS_MIGRATION_CRUD.md  README.md  RELEASE_CANDIDATE_0.1.0.md  RELEASE_CANDIDATE_0.2.0.md
docs/Maestro_Manifesto/: ARCHITECTURE.md  CONVENTIONS.md  FEATURE_LEVELS.md  MAESTRO_MANIFESTO.md  README.md  VALUE_STREAMS.md
docs/Practical_Guides/: PROJECT_ONBOARDING.md  README.md  SMOKE_TEST_DEBIAN.md  SMOKE_TEST_MACOS.md  SMOKE_TEST_OMARCHY.md  USER_ONBOARDING.md
docs/User_Manual/: COMMANDS_AND_PANELS.md  README.md
maestro/: config.toml.example  config.yaml.example  config.yml.example
maestro/personas/: maestro.md  project-manager.md  quality-assurance.md  software-engineer.md  user-experience.md
scripts/: build-deb.sh  build-macos-pkg.sh  build-omarchy-pkg.sh  check-doc-links.sh  install.sh  publish-github.sh  quality-gate-onboarding.sh  quality-gate.sh  release-local.sh  setup-assets.sh  smoke-test-debian.sh  smoke-test-omarchy.sh  test-publish-flow.sh
src/: main.rs
(+113 files in other folders)
