[package]
name = "maestro_ai"
version = "0.1.0"
edition = "2018"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time", "io-util", "fs"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
open = "5.1"
url = "2.5"
keyring = "3"
ratatui-image = "3.0"
tui-big-text = "0.6"

[lib]
name = "maestro_ai"
path = "src/lib.rs"

[[bin]]
name = "maestro"
path = "src/main.rs"
